# polaris

./: .coverage.velma.3434027.XaTbjxmx.c  .gitignore  README.md  examples.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/design/: ADVCAP.md  CMDLIST.md  DYNSCHEMA.md  GRAPHFIXES.txt  NEXT.md
docs/prompts/: debugging.md
docs/templates/: README_TEMPLATE.md
src/: __init__.py  cli.py
src/core/: exceptions.py  graph.py  graph_components.py  graph_metrics.py  graph_paths.py  graph_subgraphs.py  graph_traversal.py  models.py
src/core/graph_paths/: README.md  __init__.py  models.py  utils.py
src/core/graph_paths/algorithms/: __init__.py  all_paths.py  bidirectional.py  shortest_path.py
src/core/graph_paths/algorithms/advanced/: alt.py  contraction_hierarchies.py  hub_labeling.py  transit_node_routing.py
src/infrastructure/: README.md  cache.py  event_bus.py  server.py
src/infrastructure/storage/: __init__.py  base.py  node_storage.py  service.py
src/infrastructure/storage/plugins/base/: README.md  interfaces.py
src/infrastructure/storage/plugins/event_store/: README.md  __init__.py  store.py
src/infrastructure/storage/plugins/json_fs/: __init__.py
src/infrastructure/storage/plugins/json_fs/storage/: __init__.py  edge_storage.py  node_storage.py
src/infrastructure/storage/plugins/json_fs/utils/: __init__.py  filtering.py  keys.py  persistence.py  serialization.py
src/infrastructure/storage/plugins/sqlite/: constants.py
src/infrastructure/storage/plugins/sqlite/storage/: __init__.py  edge_storage.py  node_storage.py
src/infrastructure/storage/plugins/sqlite/utils/: conversion.py  persistence.py  queries.py
src/polaris/: __main__.py  _version.py  cli.py
src/polaris/core/: README.md  __init__.py  composite_graph.py  enums.py  exceptions.py  graph.py  graph_components.py  graph_metrics.py  graph_subgraphs.py  metrics.py  middleware.py  models.py  partitioning.py  serialization.py  streaming_metrics.py  types.py  validation.py
src/polaris/core/graph/: __init__.py  base.py  cache.py  events.py  state.py  traversal.py
src/polaris/core/graph/traversal/: __init__.py  base.py  cache.py  path_models.py  types.py  utils.py
src/polaris/core/graph/traversal/algorithms/: __init__.py  all_paths.py  bidirectional.py  shortest_path.py
src/polaris/core/graph/traversal/algorithms/advanced/: README.md  __init__.py  alt.py  contraction_hierarchies.py  hub_labeling.py  transit_node_routing.py
src/polaris/core/graph/traversal/algorithms/advanced/contraction_hierarchies/: __init__.py  cache.py  finder.py  models.py  preprocessor.py  storage.py  utils.py
src/polaris/core/graph/traversal/algorithms/advanced/hub_labeling/: __init__.py  finder.py  models.py  preprocessor.py  storage.py  utils.py
src/polaris/core/graph_operations/: README.md  components.py  metrics.py  partitioning.py  serialization.py  subgraphs.py
src/polaris/core/graph_paths/: __init__.py  base.py  cache.py  models.py  types.py  utils.py
src/polaris/core/graph_paths/algorithms/: __init__.py  all_paths.py  bidirectional.py  shortest_path.py
src/polaris/core/graph_paths/algorithms/advanced/: __init__.py  alt.py  contraction_hierarchies.py  hub_labeling.py  transit_node_routing.py
src/polaris/core/models/: README.md  __init__.py  base.py  edge.py  metadata.py  node.py
src/polaris/core/old/: README.md  delta_tracking.py  traversal.py
src/polaris/infrastructure/: __init__.py  cache.py  server.py
src/polaris/infrastructure/storage/: README.md  __init__.py  edge_storage.py
src/polaris/infrastructure/storage/plugins/: __init__.py
src/polaris/infrastructure/storage/plugins/base/: __init__.py  interfaces.py
src/polaris/infrastructure/storage/plugins/event_store/: constants.py  models.py
src/polaris/infrastructure/storage/plugins/json_fs/: README.md  constants.py
src/polaris/infrastructure/storage/plugins/json_fs/storage/: edge_storage.py  node_storage.py
src/polaris/infrastructure/storage/plugins/json_fs/utils/: filtering.py  keys.py  persistence.py  serialization.py
src/polaris/infrastructure/storage/plugins/sqlite/: README.md  __init__.py
src/polaris/infrastructure/storage/plugins/sqlite/storage/: edge_storage.py  node_storage.py
src/polaris/infrastructure/storage/plugins/sqlite/utils/: __init__.py  conversion.py  persistence.py  queries.py
src/polaris/infrastructure/storage/plugins/utils/: __init__.py  serialization.py  validation.py
src/polaris/repositories/: base.py  node.py
src/polaris/search/: README.md  semantic.py
src/polaris/search/query/: __init__.py  filters.py  graph.py  results.py  sorting.py
src/polaris/utils/: README.md
src/polaris/utils/validation/: __init__.py  base.py  integrity.py  reporter.py  schema.py
src/repositories/: README.md  __init__.py  base.py  edge.py  entity.py
src/search/: __init__.py  semantic.py
src/search/query/: base.py  semantic.py
src/utils/: __init__.py
src/utils/validation/: integrity.py  reporter.py  ruleset.py  schema.py
tests/: __init__.py  test_core.py
tests/core/: conftest.py  test_alt.py  test_contraction_hierarchies.py  test_exceptions.py  test_graph.py  test_graph_components.py  test_graph_metrics.py  test_graph_paths.py  test_graph_paths_advanced.py  test_graph_paths_validation.py  test_graph_subgraphs.py  test_graph_traversal.py  test_hub_labeling.py  test_models.py
tests/core/graph/traversal/algorithms/advanced/contraction_hierarchies/: __init__.py  conftest.py  test_cache.py  test_ch_complex.py  test_ch_contract_node.py  test_ch_edge_cases.py  test_ch_path_finding.py  test_ch_preprocessing.py  test_ch_shortcuts.py
tests/core/models/: __init__.py  test_base.py  test_edge.py  test_metadata.py  test_node.py
tests/infrastructure/storage/plugins/: __init__.py
tests/infrastructure/storage/plugins/json_fs/: __init__.py  test_serialization.py
